@@ -715,6 +715,7 @@ NUMBER_REGEXP = "[\d"
 #for k in UNICODE_INTEGERS.keys(): NUMBER_REGEXP+=k # COVERED by re.UNICODE
 for k in UNICODE_FRACTIONS.keys(): NUMBER_REGEXP+=k
 NUMBER_START_REGEXP = NUMBER_REGEXP + ']'
+NUMBER_END_NO_RANGE_REGEXP = NUMBER_START_REGEXP # Is this right -- quick fix here.
 NUMBER_MID_REGEXP = NUMBER_REGEXP + ',.' + SLASH
 NUMBER_MID_NO_RANGE_REGEXP = NUMBER_MID_REGEXP + " /]"
 NUMBER_MID_REGEXP += " /-"
